welcome.lessons.welcome.variables.Variables.scala.code
var nbpas:int = 0;

while (!estSurBiscuit()) { avance(); nbpas = nbpas +1 }
prendBiscuit;
while (nbpas != 0 ) { recule(); nbpas = nbpas - 1}